[package]
name = "htop"
version = "0.0.6"
authors = ["senees <code@senees.de>"]
description = "HTML to PDF converter"
documentation = "https://docs.rs/htop"
repository = "https://github.com/senees/htop.git"
keywords = ["html", "pdf", "headless", "chrome", "converter"]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.1.6", features = ["cargo"] }
env_logger = "0.10.0"
headless_chrome = "1.0.5"
log = "0.4.17"